--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,24 @@ verify_ssl = true
 
 [packages]
 ipykernel = "*"
+dvc = "*"
+pyarrow = "*"
 regex = "*"
 numpy = "*"
 pandas = "*"
+polars = "*"
+feature-engine = "*"
+scikit-learn = "*"
+umap-learn = {extras = ["plot"], version = "*"} 
+xgboost = "*"
+spacy = "==3.3.0"
+gensim = "*"
+optuna = "*"
+shap = "*"
+matplotlib = "*"
 altair = "==4.1.0"
 plotly = "==5.3.1"
+yfinance = "*"
 
 [requires]
 python_version = "3.8"
