--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,198 @@
+aiohttp==3.8.1
+aiohttp-retry==2.4.6
+aiosignal==1.2.0
+alembic==1.7.7
 altair==4.1.0
+appdirs==1.4.4
 appnope==0.1.3
 asttokens==2.0.5
+async-timeout==4.0.2
+asyncssh==2.10.1
+atpublic==3.0.1
 attrs==21.4.0
+autopage==0.5.0
 backcall==0.2.0
+bleach==5.0.0
+blis==0.7.7
+bokeh==2.4.2
+catalogue==2.0.7
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+cliff==3.10.1
+cloudpickle==2.0.0
+cmaes==0.8.2
+cmd2==2.4.1
+colorama==0.4.4
+colorcet==3.0.0
+colorlog==6.6.0
+commonmark==0.9.1
+configobj==5.0.6
+cryptography==37.0.1
+cycler==0.11.0
+cymem==2.0.6
+dask==2022.4.2
+datashader==0.14.0
+datashape==0.5.2
 debugpy==1.6.0
 decorator==5.1.1
+dictdiffer==0.9.0
+diskcache==5.4.0
+distributed==2022.4.2
+distro==1.7.0
+dpath==2.0.6
+dulwich==0.20.35
+dvc==2.10.2
+dvc-render==0.0.5
+dvclive==0.7.3
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
 entrypoints==0.4
 executing==0.8.3
-importlib-resources==5.6.0
-ipykernel==6.12.1
-ipython==8.2.0
+feature-engine==1.2.0
+flatten-dict==0.4.2
+flufl.lock==7.0
+fonttools==4.33.3
+frozenlist==1.3.0
+fsspec==2022.3.0
+ftfy==6.1.1
+funcy==1.17
+future==0.18.2
+gensim==4.2.0
+gitdb==4.0.9
+GitPython==3.1.27
+grandalf==0.6
+greenlet==1.1.2
+HeapDict==1.0.1
+holoviews==1.14.8
+idna==3.3
+imageio==2.19.0
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+ipykernel==6.13.0
+ipython==8.3.0
 jedi==0.18.1
-Jinja2==3.1.1
+Jinja2==3.1.2
+joblib==1.1.0
 jsonschema==4.4.0
-jupyter-client==7.2.2
-jupyter-core==4.9.2
+jupyter-client==7.3.0
+jupyter-core==4.10.0
+kiwisolver==1.4.2
+langcodes==3.3.0
+llvmlite==0.38.0
+locket==1.0.0
+lxml==4.8.0
+mailchecker==4.1.16
+Mako==1.2.0
+Markdown==3.3.6
 MarkupSafe==2.1.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
+msgpack==1.0.3
+multidict==6.0.2
+multipledispatch==0.6.0
+multitasking==0.0.10
+murmurhash==1.0.7
+nanotime==0.5.2
 nest-asyncio==1.5.5
-numpy==1.22.3
+networkx==2.8
+numba==0.55.1
+numpy==1.21.6
+optuna==2.10.0
 packaging==21.3
 pandas==1.4.2
+panel==0.13.0
+param==1.12.1
 parso==0.8.3
+partd==1.2.0
+pathspec==0.9.0
+pathy==0.6.1
+patsy==0.5.2
+pbr==5.8.1
 pexpect==4.8.0
+phonenumbers==8.12.47
 pickleshare==0.7.5
+Pillow==9.1.0
 plotly==5.3.1
+polars==0.13.28
+preshed==3.0.6
+prettytable==3.2.0
 prompt-toolkit==3.0.29
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
-Pygments==2.11.2
-pyparsing==3.0.7
+pyarrow==7.0.0
+pycparser==2.21
+pyct==0.4.8
+pydantic==1.8.2
+pydot==1.4.2
+pygit2==1.9.1
+Pygments==2.12.0
+pygtrie==2.4.2
+pynndescent==0.5.6
+pyparsing==3.0.8
+pyperclip==1.8.2
 pyrsistent==0.18.1
+python-benedict==0.25.1
 python-dateutil==2.8.2
+python-fsutil==0.6.0
+python-slugify==6.1.2
 pytz==2022.1
+pyviz-comms==2.2.0
+PyWavelets==1.3.0
+PyYAML==6.0
 pyzmq==22.3.0
-regex==2022.3.15
+regex==2022.4.24
+requests==2.27.1
+rich==12.3.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+scikit-image==0.19.2
+scikit-learn==1.0.2
+scipy==1.8.0
+scmrepo==0.0.19
+seaborn==0.11.2
+shap==0.40.0
+shortuuid==1.0.8
+shtab==1.5.4
 six==1.16.0
+slicer==0.0.7
+smart-open==5.2.1
+smmap==5.0.0
+sortedcontainers==2.4.0
+spacy==3.3.0
+spacy-legacy==3.0.9
+spacy-loggers==1.0.2
+SQLAlchemy==1.4.36
+srsly==2.4.3
 stack-data==0.2.0
+statsmodels==0.13.2
+stevedore==3.5.0
+tabulate==0.8.9
+tblib==1.7.0
 tenacity==8.0.1
+text-unidecode==1.3
+thinc==8.0.15
+threadpoolctl==3.1.0
+tifffile==2022.4.28
+toml==0.10.2
 toolz==0.11.2
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.1.1
+typer==0.4.1
+typing_extensions==4.2.0
+umap-learn==0.5.3
+urllib3==1.26.9
+voluptuous==0.13.1
+wasabi==0.9.1
 wcwidth==0.2.5
+webencodings==0.5.1
+xarray==2022.3.0
+xgboost==1.6.0
+xmltodict==0.12.0
+yarl==1.7.2
+yfinance==0.1.70
+zc.lockfile==2.0
+zict==2.2.0
 zipp==3.8.0
