--- a/source/config_spacy/config_dl.cfg
+++ b/source/config_spacy/config_dl.cfg
@@ -1,7 +1,7 @@
 [paths]
 root = "dataset"
 train = "${paths.root}/sentiment_trainset.spacy"
-dev = "${paths.root}/sentiment_testset.spacy"
+dev = "${paths.root}/sentiment_validset.spacy"
 vectors = null
 init_tok2vec = null
 
