--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ backcall==0.2.0
 bleach==5.0.0
 blis==0.7.7
 bokeh==2.4.2
+cachetools==5.0.0
 catalogue==2.0.7
 certifi==2021.10.8
 cffi==1.15.0
@@ -29,17 +30,17 @@ colorcet==3.0.0
 colorlog==6.6.0
 commonmark==0.9.1
 configobj==5.0.6
-cryptography==37.0.1
+cryptography==37.0.2
 cycler==0.11.0
 cymem==2.0.6
-dask==2022.4.2
+dask==2022.5.0
 datashader==0.14.0
 datashape==0.5.2
 debugpy==1.6.0
 decorator==5.1.1
 dictdiffer==0.9.0
 diskcache==5.4.0
-distributed==2022.4.2
+distributed==2022.5.0
 distro==1.7.0
 dpath==2.0.6
 dulwich==0.20.35
@@ -49,7 +50,7 @@ dvclive==0.7.3
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl
 entrypoints==0.4
 executing==0.8.3
-feature-engine==1.2.0
+feature-engine==1.3.0
 flatten-dict==0.4.2
 flufl.lock==7.0
 fonttools==4.33.3
@@ -61,10 +62,16 @@ future==0.18.2
 gensim==4.2.0
 gitdb==4.0.9
 GitPython==3.1.27
+google-api-core==2.7.3
+google-api-python-client==2.47.0
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.56.0
 grandalf==0.6
 greenlet==1.1.2
 HeapDict==1.0.1
 holoviews==1.14.8
+httplib2==0.20.4
 idna==3.3
 imageio==2.19.0
 importlib-metadata==4.11.3
@@ -86,7 +93,7 @@ mailchecker==4.1.16
 Mako==1.2.0
 Markdown==3.3.6
 MarkupSafe==2.1.1
-matplotlib==3.5.1
+matplotlib==3.5.2
 matplotlib-inline==0.1.3
 msgpack==1.0.3
 multidict==6.0.2
@@ -98,6 +105,7 @@ nest-asyncio==1.5.5
 networkx==2.8
 numba==0.55.1
 numpy==1.21.6
+oauth2client==4.1.3
 optuna==2.10.0
 packaging==21.3
 pandas==1.4.2
@@ -108,28 +116,33 @@ partd==1.2.0
 pathspec==0.9.0
 pathy==0.6.1
 patsy==0.5.2
-pbr==5.8.1
+pbr==5.9.0
 pexpect==4.8.0
 phonenumbers==8.12.47
 pickleshare==0.7.5
 Pillow==9.1.0
 plotly==5.3.1
-polars==0.13.28
+polars==0.13.29
 preshed==3.0.6
 prettytable==3.2.0
 prompt-toolkit==3.0.29
+protobuf==3.20.1
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==7.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pyct==0.4.8
 pydantic==1.8.2
 pydot==1.4.2
+PyDrive2==1.10.1
 pygit2==1.9.1
 Pygments==2.12.0
 pygtrie==2.4.2
 pynndescent==0.5.6
+pyOpenSSL==22.0.0
 pyparsing==3.0.8
 pyperclip==1.8.2
 pyrsistent==0.18.1
@@ -145,6 +158,7 @@ pyzmq==22.3.0
 regex==2022.4.24
 requests==2.27.1
 rich==12.3.0
+rsa==4.8
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 scikit-image==0.19.2
@@ -174,7 +188,7 @@ tenacity==8.0.1
 text-unidecode==1.3
 thinc==8.0.15
 threadpoolctl==3.1.0
-tifffile==2022.4.28
+tifffile==2022.5.4
 toml==0.10.2
 toolz==0.11.2
 tornado==6.1
@@ -183,6 +197,7 @@ traitlets==5.1.1
 typer==0.4.1
 typing_extensions==4.2.0
 umap-learn==0.5.3
+uritemplate==4.1.1
 urllib3==1.26.9
 voluptuous==0.13.1
 wasabi==0.9.1
