--- a/source/config_spacy/config_tp.cfg
+++ b/source/config_spacy/config_tp.cfg
@@ -22,7 +22,7 @@ before_creation = null
 after_creation = null
 after_pipeline_creation = null
 # Default batch size to use with nlp.pipe and nlp.evaluate. 
-batch_size = 1000
+batch_size = 200
 # Tokenizer method. 
 tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 
@@ -40,7 +40,7 @@ nO = null
 [components.textcat.model.linear_model]
 @architectures = "spacy.TextCatBOW.v2"
 exclusive_classes = true
-ngram_size = 1
+ngram_size = 4
 no_output_layer = false
 nO = null
 
@@ -111,7 +111,7 @@ dropout = 0.1
 accumulate_gradient = 1
 # Controls early-stopping, i.e., the number of steps to continue without
 # improvement before stopping. 0 disables early stopping.
-patience = 600
+patience = 400
 # Number of epochs. 0 means unlimited. If >= 0, train corpus is loaded once in
 # memory and shuffled within the training loop. -1 means stream train corpus
 # rather than loading in memory with no shuffling within the training loop.
@@ -150,10 +150,10 @@ progress_bar = true
 beta1 = 0.9
 beta2 = 0.999
 L2_is_weight_decay = true
-L2 = 0.01
-grad_clip = 1.0
-use_averages = false
-eps = 0.00000001
+L2 = 1e-06
+grad_clip = 5.0
+use_averages = true
+eps = 1e-08
 learn_rate = 0.001
 
 [training.score_weights]
